--- a/game.html
+++ b/game.html
@@ -12,6 +12,8 @@
 </style>
     <canvas id="id-canvas" width="800" height="600"></canvas>
 <script>
+var log = console.log.bind(console)
+
 
 var imageFromPath = function(path) {
     var img = new Image()
@@ -27,11 +29,20 @@ var Paddle = function() {
         y : 500,
         speed : 15,
     }
+    o.move = function(x) {
+        if (x < 0) {
+            x = 0
+        }
+        if (x > 800 - o.image.width) {
+            x = 800 - o.image.width
+        }
+        o.x = x
+    }   
     o.moveRight = function() {
-        o.x += o.speed
+        o.move(o.x += o.speed)
     }
     o.moveLeft = function() {
-        o.x -= o.speed
+        o.move(o.x -= o.speed)
     }
     o.collide = function(ball) {
         if (ball.y + ball.image.height > o.y) {
@@ -70,10 +81,57 @@ var Ball = function() {
             o.y += o.speedY
         }
     }
-
+    o.反弹 = function() {
+        o.speedY *= -1
+    }
     return o
 }
 
+var rectIntersects = function(a, b) {
+    var o = a
+    if (b.y < o.y + o.image.height) {
+        // log('ok')
+    }
+    if (b.y + b.image.height > o.y && b.y < o.y + o.image.height) {
+        log(233)
+        if (b.x + b.image.width > o.x && b.x < o.x + o.image.width) {
+            return true
+        }
+    }
+}
+
+var Block = function() {
+    var image = imageFromPath('block.png')
+    var o = {
+        image : image,
+        x : 200,
+        y : 200,
+        w : 60,
+        h : 20,
+        alive : true,
+    }
+
+    o.kill = function() {
+        o.alive = false
+    }
+    o.move = function() {
+        if (o.fired) {
+            if (o.x < 0 || o.x > 800){
+                o.speedX *= -1
+            }
+            if (o.y < 0 || o.y > 600){
+                o.speedY *= -1
+            }
+            o.x += o.speedX
+            o.y += o.speedY
+        }
+    }
+    
+    o.collide = function(ball) {
+        return o.alive && (rectIntersects(o, ball) || rectIntersects(ball, o))
+    }
+    return o
+}
 
 var GuaGame = function() {
     var g = {
@@ -120,14 +178,18 @@ var __main = function() {
     var paddle = Paddle()
     var ball = Ball()
     var game = GuaGame()
-
-    var log = console.log.bind(console)
+    var blocks = []
+    for (var i = 0; i < 3; i++) {
+        var b = Block()
+        // 设置砖块的位置
+        b.x = i * 100
+        blocks.push(b)
+    } 
 
     var leftdown = false
     var rightdown = false
 
     game.registerAction('a', function(){
-        log(1111)
         paddle.moveLeft()
     })
 
@@ -142,16 +204,28 @@ var __main = function() {
     game.update = function() {
         ball.move()
         if (paddle.collide(ball)) {
-            ball.speedY *= -1
+            ball.反弹()
         }
-        // if (paddle.collide(ball)) {
-        //     paddle.sppeed
-        // }
+        // 球相撞 
+        for (var i = 0; i < blocks.length; i++) {
+            var b = blocks[i]
+            if (b.collide(ball)) {
+                log('相撞')
+                b.kill()
+                ball.反弹()
+            }
+        } 
     }
 
     game.draw = function() {
         game.drawImage(paddle)
         game.drawImage(ball)
+        for (var i = 0; i < blocks.length; i++) {
+            var b = blocks[i]
+            if (b.alive) {
+                game.drawImage(b)
+            } 
+        }
     }
 
 
