--- a/game.html
+++ b/game.html
@@ -3,188 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <title>game1</title>
+    <style>
+        canvas {
+            border: 1px solid;
+        }
+    </style>
+    <script src='utils.js'></script>
+    <script src='guagame.js'></script>
+    <script src='paddle.js'></script>
+    <script src='ball.js'></script>
+    <script src='block.js'></script>
+    <script src='level.js'></script>
 </head>
 <body>
-<style>
-    canvas {
-        border: 1px solid;
-    }
-</style>
+   
     <canvas id="id-canvas" width="800" height="600"></canvas>
+    <hr>
+    <input id=id-input-speed type="range" value="1">
 <script>
-var log = console.log.bind(console)
+var loadlevels = function(n) {
+    var blocks = []
+    n = n - 1
+    var level = levels[n]
+    for (var i = 0; i < level.length; i++) {
+        var position = level[i]
+        var b = Block(position)
+        blocks.push(b)
+    } 
+    return blocks
 
-
-var imageFromPath = function(path) {
-    var img = new Image()
-    img.src = path
-    return img
 }
 
-var Paddle = function() {
-    var image = imageFromPath('gua.png')
-    var o = {
-        image : image,
-        x : 300,
-        y : 500,
-        speed : 15,
-    }
-    o.move = function(x) {
-        if (x < 0) {
-            x = 0
-        }
-        if (x > 800 - o.image.width) {
-            x = 800 - o.image.width
-        }
-        o.x = x
-    }   
-    o.moveRight = function() {
-        o.move(o.x += o.speed)
-    }
-    o.moveLeft = function() {
-        o.move(o.x -= o.speed)
-    }
-    o.collide = function(ball) {
-        if (ball.y + ball.image.height > o.y) {
-            if (ball.x > o.x && ball.x < o.x + o.image.width) {
-                return true
-            }
-        }
-        return false
-    }
-    return o
-}
+var blocks = []
 
-var Ball = function() {
-    var image = imageFromPath('ball.png')
-    var o = {
-        image : image,
-        x : 300,
-        y : 400,
-        speedX : 10,
-        speedY : 10,
-        fired : false,
-    }
-
-    o.fire = function() {
-        o.fired = true
-    }
-    o.move = function() {
-        if (o.fired) {
-            if (o.x < 0 || o.x > 800){
-                o.speedX *= -1
-            }
-            if (o.y < 0 || o.y > 600){
-                o.speedY *= -1
-            }
-            o.x += o.speedX
-            o.y += o.speedY
-        }
-    }
-    o.反弹 = function() {
-        o.speedY *= -1
-    }
-    return o
-}
-
-var rectIntersects = function(a, b) {
-    var o = a
-    if (b.y < o.y + o.image.height) {
-        // log('ok')
-    }
-    if (b.y + b.image.height > o.y && b.y < o.y + o.image.height) {
-        log(233)
-        if (b.x + b.image.width > o.x && b.x < o.x + o.image.width) {
-            return true
-        }
-    }
-}
-
-var Block = function() {
-    var image = imageFromPath('block.png')
-    var o = {
-        image : image,
-        x : 200,
-        y : 200,
-        w : 60,
-        h : 20,
-        alive : true,
-    }
-
-    o.kill = function() {
-        o.alive = false
-    }
-    o.move = function() {
-        if (o.fired) {
-            if (o.x < 0 || o.x > 800){
-                o.speedX *= -1
-            }
-            if (o.y < 0 || o.y > 600){
-                o.speedY *= -1
-            }
-            o.x += o.speedX
-            o.y += o.speedY
-        }
-    }
+var enableDebugMode = function(enable) {
     
-    o.collide = function(ball) {
-        return o.alive && (rectIntersects(o, ball) || rectIntersects(ball, o))
-    }
-    return o
-}
-
-var GuaGame = function() {
-    var g = {
-        actions : {},
-        keywords : {},
-    }
-    var canvas = document.querySelector('#id-canvas')
-    var context = canvas.getContext('2d')
-    g.canvas = canvas
-    g.context = context
-
-    g.drawImage = function(guaImage) {
-        g.context.drawImage(guaImage.image, guaImage.x, guaImage.y)
-    }
-
-    window.addEventListener('keydown', function(event){
-        g.keywords[event.key] = true
-    })
-
-    window.addEventListener('keyup', function(event){
-        g.keywords[event.key] = false
-    })
-
-    g.registerAction = function(key, callback){
-        g.actions[key] = callback
-    }
-
-    setInterval(function () {
-        var actions = Object.keys(g.actions)
-        for (var i = 0; i < actions.length; i++) {
-            var key = actions[i]
-            if (g.keywords[key]) {
-                g.actions[key]()
-            }
+    if (!enable) {
+        return 
+    } 
+    window.paused = false
+    window.addEventListener('keydown', function(event) {
+        var k = event.key
+        if (k == 'p') {
+            paused = !paused
+        } else if ('1234567'.includes(k)) {
+            blocks = loadlevels(Number(k))
         }
-        g.update()
-        context.clearRect(0, 0, canvas.width, canvas.height)
-        g.draw()
-    }, 1000/60)
-    return g
+    })
+
+    //控制滑条进度
+    document.querySelector('#id-input-speed').addEventListener('input', function(event){
+        var input = event.target
+        window.fps = Number(input.value)
+    })
+
 }
 
 var __main = function() {
+    enableDebugMode(true)
+    var game = GuaGame(60)
     var paddle = Paddle()
     var ball = Ball()
-    var game = GuaGame()
-    var blocks = []
-    for (var i = 0; i < 3; i++) {
-        var b = Block()
-        // 设置砖块的位置
-        b.x = i * 100
-        blocks.push(b)
-    } 
+    blocks = loadlevels(1)
+
 
     var leftdown = false
     var rightdown = false
@@ -202,6 +83,9 @@ var __main = function() {
     })
 
     game.update = function() {
+        if (paused) {
+            return 
+        }
         ball.move()
         if (paddle.collide(ball)) {
             ball.反弹()
@@ -210,7 +94,6 @@ var __main = function() {
         for (var i = 0; i < blocks.length; i++) {
             var b = blocks[i]
             if (b.collide(ball)) {
-                log('相撞')
                 b.kill()
                 ball.反弹()
             }
@@ -227,11 +110,9 @@ var __main = function() {
             } 
         }
     }
-
-
 }
 
 __main()
 </script>
-</body>
+    </body>
 </html>
