增加基础迁移

--- a/game.html
+++ b/game.html
@@ -22,6 +22,7 @@
         <script src='scene/end/scene_end.js'></script>
         <script src='scene/title/scene_title.js'></script>
         <!-- 关卡数据 -->
+        <script src='scene/level/scene_level.js'></script>
         <script src='level.js'></script>
     </head>
     <body>
