--- a/game3/game.html
+++ b/game3/game.html
@@ -14,6 +14,8 @@
         <script src='guagame/gua_game.js'></script>
         <script src='guagame/gua_scene.js'></script>
         <script src='guagame/gua_image.js'></script>
+        <script src='guagame/gua_lable.js'></script>
+        <script src='guagame/gua_animation.js'></script>
         <script src='guagame/gua_particle_system.js'></script>
         <!-- 场景文件 -->
         <script src='scene/main/paddle.js'></script>
@@ -23,39 +25,24 @@
         <!-- 结束和标题场景 -->
         <script src='scene/end/scene_end.js'></script>
         <script src='scene/title/scene_title.js'></script>
-        <!-- 关卡数据 -->
-        <script src='level.js'></script>
+        <!-- 配置数据 -->
+        <script src='config.js'></script>
     </head>
     <body>
-        <canvas id="id-canvas" width="480" height="700"></canvas>
+        <canvas id="id-canvas" width="480" height="580"></canvas>
         <hr>
         <input id=id-input-speed type="range" value="1">
-        <div class="">
+        <div class="gua-controls">
+<!--        <div class="">-->
+<!--            <label>-->
+<!--                <input class='gua-auto-slider' type="range" -->
+<!--                value=""-->
+<!--                data-value="config.player_speed"> -->
+<!--                玩家速度: <span class="gua-label"></span>-->
+<!--            </label>-->
+<!--        </div>-->
             <!-- <textarea id="id-text-log" rows="20" cols="50"></textarea> -->
-        </div>
-        <div class="">
-            <label>
-                <input class='gua-auto-slider' type="range" 
-                value=""
-                data-value="config.player_speed"> 
-                玩家速度: <span class="gua-label"></span>
-            </label>
-        </div>
-        <div class="">
-            <label>
-                <input class='gua-auto-slider' type="range" 
-                value=""
-                data-value="config.bullet_speed"> 
-                bullet 速度: <span class="gua-label"></span>
-            </label>
-        </div>
-        <div class="">
-            <label>
-                <input class='gua-auto-slider' type="range" 
-                value=""
-                data-value="config.cooldown_speed"> 
-                发射子弹间隔: <span class="gua-label"></span>
-            </label>
+
         </div>
         <script src=main.js></script>
         <script>
@@ -69,15 +56,50 @@
                     })
                 }
             }
+            var templateControl = function (key, item) {
+                var t = `
+                    <div class="">
+                        <label>
+                            <input class='gua-auto-slider' type="range"
+                            max="300"
+                            value="${item.value}"
+                            data-value="config.${key}">
+                            ${item._comment}: <span class="gua-label"></span>
+                        </label>
+                    </div>
+                `
+                return t
+            }
+            var insertControls = function () {
+                var div = e('.gua-controls')
+                var keys = Object.keys(config)
+                for (var k of keys) {
+                    var item = config[k]
+                    var html = templateControl(k, item)
+                    div.insertAdjacentHTML('beforeend', html)
+                }
+            }
+            var bindEvents = function() {
+                bindAll('.gua-auto-slider', 'input', function(event){
+                    var target = event.target
+                    var bindVar = target.dataset.value
+                    var v = target.value
+                    eval(bindVar + '.value =' + v)
+                    var label = target.closest('label').querySelector('.gua-label')
+                    label.innerText = v
+                })
+            }
+            var __main = function () {
+                // 从配置文件生成html控件
+                insertControls()
+                // 绑定事件
+                bindEvents()
 
-            bindAll('.gua-auto-slider', 'input', function(event){
-                var target = event.target
-                var bindVar = target.dataset.value
-                var v = target.value
-                eval(bindVar + '=' + v)
-                var label = target.closest('label').querySelector('.gua-label')
-                label.innerText = v
-            })
+            }
+
+            __main()
+
+
         </script>
     </body>
 </html>
